feat: hard stress execution.
